# vibe-coding-example

./: CLAUDE.md  README.md
agent-collaboration/: CLAUDE.md  Cargo.toml
agent-collaboration/examples/: code_analysis_demo.rs
agent-collaboration/src/: error.rs  lib.rs  logging.rs
agent-collaboration/src/agent/: base.rs  mod.rs  state.rs
agent-collaboration/src/capability/: mod.rs  registry.rs  trait.rs
agent-collaboration/src/communication/: channel.rs  message.rs  mod.rs
agent-collaboration/src/coordinator/: coordinator.rs  mod.rs  result.rs  specialized.rs
agent-collaboration/src/decomposer/: analyzer.rs  assigner.rs  hybrid.rs  mod.rs  parallel.rs  sequential.rs  strategy.rs
agent-collaboration/src/llm/: anthropic.rs  client.rs  config.rs  error.rs  fallback.rs  mod.rs  openai.rs
agent-collaboration/src/retry/: circuit_breaker.rs  executor.rs  mod.rs  policy.rs  trait_.rs
email-copilot/skills/exmail-triage/: README.md  SKILL.md  config.example.yaml  config.yaml
email-copilot/skills/exmail-triage/agents/: openai.yaml
email-copilot/skills/exmail-triage/references/: classification-rules.md  config.md  scheduler-examples.md
email-copilot/skills/exmail-triage/scripts/: imap_diagnose.py  imap_login_check.py  run_digest.py  self_check.py  triage_lib.py  validate_config.py
