[package]
name = "agent-collaboration"
version = "0.1.0"
edition = "2021"
description = "A Rust Agent framework for multi-agent collaboration"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"
